--- a/function/templates/ScaledJob.yaml
+++ b/function/templates/ScaledJob.yaml
@@ -12,6 +12,8 @@ spec:
   rollout:
     strategy: {{ .Values.rollout.strategy }}
     propagationPolicy: {{ .Values.rollout.strategy }}
+  scalingStrategy:
+    strategy: {{ .Values.rollout.strategy }}
   jobTargetRef:
     parallelism: {{ .Values.job.parallelism }}
     completions: {{ .Values.job.completions }}
@@ -26,7 +28,9 @@ spec:
       {{- else if eq .type "azure-blob" }}
 {{- include "function.blob" $data | indent 4 }}
       {{- else if eq .type "azure-pipelines" }}
-  {{- include "function.azure-pipelines" $data | indent 4 }}
+{{- include "function.azure-pipelines" $data | indent 4 }}
+      {{- else if eq .type "postgres" }}
+{{- include "function.postgres" $data | indent 4 }}
       {{- end }}
     {{- end }}
 {{- end }}
