--- a/function/templates/_postgres-trigger.yaml
+++ b/function/templates/_postgres-trigger.yaml
@@ -1,6 +1,6 @@
 {{/* metadata for a postgres Trigger */}}
 {{- define "function.postgres" }}
-- type: postgres
+- type: postgresql
   metadata:
     connectionFromEnv: {{ .trigger.connectionFromEnv }}
     query: {{ .trigger.query }}
