--- a/function/values.yaml
+++ b/function/values.yaml
@@ -34,3 +34,4 @@ rollout:
   strategy: gradual # Default strategy deletes the running jobs when the job spec changes
   propagationPolicy: background
 scalingStrategy: "default" # "default" or "accurate" supported only
+useWorkloadIdentity: true
