--- a/function/values.yaml
+++ b/function/values.yaml
@@ -25,6 +25,8 @@ pollingInterval: 30  # Optional. Default: 30 seconds
 cooldownPeriod:  300 # Optional. Default: 300 seconds
 minReplicaCount: 0   # Optional. Default: 0
 maxReplicaCount: 5 # Optional. Default: 5
+spotInstances:
+  enabled: false
 triggerAuth:
   create: true
   enabled: false
