--- a/function/Chart.yaml
+++ b/function/Chart.yaml
@@ -22,5 +22,5 @@ appVersion: 0.1.0
 
 dependencies: # A list of the chart requirements (optional)
   - name: library
-    version: dxw-optional-volume-logic
-    repository: https://github.com/hmcts/chart-library
+    version: 2.1.1-alpha
+    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
