--- a/ci-values-blob-release-name.yaml
+++ b/ci-values-blob-release-name.yaml
@@ -3,7 +3,7 @@ scaleType: Job
 triggerAuth:
   enabled: true
   create: true
-  triggerPodIdentityProvider: "azure"
+  triggerPodIdentityProvider: "azure-workload"
 triggers:
   - type: azure-blob
     # Required: blobContainerName and connection
