--- a/function/templates/_postgres-trigger.yaml
+++ b/function/templates/_postgres-trigger.yaml
@@ -3,25 +3,25 @@
 - type: postgresql
   metadata:
     {{- if .trigger.connectionFromEnv  }}
-    connectionFromEnv: {{ .trigger.connectionFromEnv }}
+    connectionFromEnv: {{ .trigger.connectionFromEnv  | quote }}
     {{- end }}
     {{- if .trigger.host  }}
-    host: {{ .trigger.host }}
+    host: {{ .trigger.host  | quote }}
     {{- end }}
     {{- if .trigger.userName  }}
-    userName: {{ .trigger.userName }}
+    userName: {{ .trigger.userName  | quote }}
     {{- end }}
     {{- if .trigger.passwordFromEnv  }}
-    passwordFromEnv: {{ .trigger.passwordFromEnv }}
+    passwordFromEnv: {{ .trigger.passwordFromEnv  | quote }}
     {{- end }}
     {{- if .trigger.port  }}
-    port: {{ .trigger.port }}
+    port: {{ .trigger.port  | quote }}
     {{- end }}
     {{- if .trigger.dbName  }}
-    dbName: {{ .trigger.dbName }}
+    dbName: {{ .trigger.dbName  | quote }}
     {{- end }}
     {{- if .trigger.sslmode  }}
-    sslmode: {{ .trigger.sslmode }}
+    sslmode: {{ .trigger.sslmode  | quote }}
     {{- end }}
 
     query: {{ .trigger.query }}
