--- a/function/Chart.yaml
+++ b/function/Chart.yaml
@@ -23,4 +23,4 @@ appVersion: 0.1.0
 dependencies: # A list of the chart requirements (optional)
   - name: library
     version: 2.2.2
-    repository: oci://hmctspublic.azurecr.io/helm
+    repository: oci://hmctsprod.azurecr.io/helm
